# flnav

./: .gitignore  CMakeLists.txt  IMPROVEMENT_PLAN.md  Makefile.am  README.md  RELEASE_CHECKLIST.md  configure  configure.ac  flnav.1
.github/workflows/: ci.yml  release.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
docs/source/: cookbook.rst
example-scripts/: access_log_highlights.json
src/: CMakeLists.txt  Makefile.am  all_ids_vtabs.cc  animals-json.cc  animals-json.h  ansi-palette-json.cc  ansi-palette-json.h  archive_manager.cc  bin2c.hh  bottom_status_source.cc  bottom_status_source.hh  builtin-scripts.cc  builtin-scripts.h  builtin-sh-scripts.cc  builtin-sh-scripts.h  cmd.parser.cc  cmds.correlation.cc  cmds.display.cc  cmds.filtering.cc  command_executor.hh  config.cmake.h.in  correlation_engine.cc  correlation_engine.hh  correlation_rule.cc  correlation_rule.hh  css-color-names-json.cc  css-color-names-json.h  default-config.cc  default-config.h  default-formats.cc  default-formats.h  diseases-json.cc  diseases-json.h  document.sections.hh  emojis-json.cc  emojis-json.h  entity_extractor.cc  entity_extractor.hh  entity_graph_vtab_impl.cc  entity_graph_vtab_impl.hh  (+97 more)
src/base/: paths.cc
test/: Makefile.am  expected_help.txt  ioc_forensic_cidr.txt  ioc_forensic_invalid_ipv4.txt  ioc_forensic_ipv4.txt  logfile_forensic_auth_bsd.0  logfile_forensic_auth_iso.0  logfile_forensic_gaps_a.0  logfile_forensic_gaps_b.0  test_forensics.sh  test_sql_normalize_ts.sh  test_sql_views_vtab.sh
tools/: bin2c  package-release.sh
(+54 files in other folders)
